--- a/src/HttpClient/Makefile
+++ b/src/HttpClient/Makefile
@@ -4,9 +4,9 @@ CFLAGS = -g
 INCLUDES = -I../../inc/HttpClient
 BASELIB=../../lib/libHttpClient.a
 
-OBJ_HTTPCLIENT=HttpClient.o
+OBJ_HTTPCLIENT=HttpClient.o HttpClientTest.o
 
-all:libHttpClient.a clean
+all:HttpClientTest libHttpClient.a clean
 	
 .c.o:
 	$(GCC) -c $< $(CFLAGS) $(INCLUDES)
@@ -14,6 +14,9 @@ all:libHttpClient.a clean
 libHttpClient.a:$(OBJ_HTTPCLIENT)
 	ar rv $@ $(OBJ_HTTPCLIENT)
 	mv -f $@ $(BASELIB)
+
+HttpClientTest:$(OBJ_HTTPCLIENT)
+	$(GCC) -o HttpClientTest $^
 
 .PHONY:clean
 
